Fix z-index issue with hidden search menu

--- a/src/themes/default/scss/fsContent/_fsContentView.scss
+++ b/src/themes/default/scss/fsContent/_fsContentView.scss
@@ -75,7 +75,7 @@
     padding: 0 $fsContentSidePaddingM;
     overflow-x: hidden;
     overflow-y: scroll;
-    z-index: 11;
+    z-index: 10;
 
     &.active-mobile {
       right: auto;
